# see-point-fly

./: .env copy  .gitignore  CITATION.cff  README.md  README_TELLO.md  action_projector.py  action_projector_fix.py  action_projector_sim.py  action_projector_sim2.py  action_projector_sim3.py  config.yaml  config_sim.yaml  config_tello.yaml  drone_controller.py  drone_controller_sim.py  drone_space.py  drone_space_sim.py  main.py  main_sim.py  main_simulator.py  main_tello.py  pyproject.toml  requirements.txt  tello_controller.py
Documentations/: Phase2_VideoProcessingAndCalibration.md
backup_files/: README_simulator.md  main_simulator.py
controller_v1_backup/Documentations/: TelloDroneControlSystem_IncrementalSteps.md
controller_v1_backup/camera_utils/: camera_calibration.py
docs/: screen_capture_guide.md
documents/: 0904_unified_tello_system_architecture.md  3_30_raw.md  coordinate_system_guide.md  drone_system_improvements_2024_03_30.md  monitor_resolution_findings.md  theory.md
output/: README.md
references_code/Simulator_override/: main_simulator_override.py
references_code/controller_v1_backup/: README.md  main.py
safety/: emergency_handler.py
src/spf/: __init__.py  main.py  simulator_main.py  tello_main.py
src/spf_tools/: README.md  cli.py
tools/: README.md  __init__.py  diagnose.py
tools/capture/: __init__.py
tools/capture(backup)/: __init__ 2.py  check_encoding.py
tools/capture_bak/: fixed_capture.py
tools/diagnostics/: __init__.py  system_check.py
tools/gemini/: README.md  accuracy_tester 2.py  accuracy_tester.py  (+1 more)
(+78 files in other folders)
